--- a/WPF/SAM.Analytical.UI.WPF/Windows/InternalConditionWithSpacesWindow.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Windows/InternalConditionWithSpacesWindow.xaml
@@ -6,17 +6,17 @@
         xmlns:local="clr-namespace:SAM.Analytical.UI.WPF"
         xmlns:WPF="clr-namespace:SAM.Core.UI.WPF;assembly=SAM.Core.UI.WPF" x:Class="SAM.Analytical.UI.WPF.InternalConditionWithSpacesWindow"
         mc:Ignorable="d"
-        Title="Internal Condition" Height="720" Width="1440">
+        Title="Internal Condition" Height="780" Width="1440">
     <Grid>
 
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition Height="35"/>
         </Grid.RowDefinitions>
-        <local:InternalConditionControl x:Name="internalConditionControl" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,0,5.6,0"/>
+        <local:InternalConditionControl x:Name="internalConditionControl" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="210,0,5.6,0"/>
         <Button x:Name="button_Cancel" IsCancel="True" Content="Cancel" Grid.Row="1" Width="70" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,9.6,10.4" Click="button_Cancel_Click" Height="19"/>
         <Button x:Name="button_OK" Content="OK" Grid.Row="1" Margin="0,5.8,84.6,10.4" HorizontalAlignment="Right" Width="70" Click="button_OK_Click"/>
-        <WPF:ListBoxControl x:Name="listBoxControl" HorizontalAlignment="Stretch" Height="634" VerticalAlignment="Top" Margin="7,6,1234.6,0"/>
+        <WPF:ListBoxControl x:Name="listBoxControl" HorizontalAlignment="Stretch" Height="669" VerticalAlignment="Top" Margin="7,6,1234.6,0" Grid.RowSpan="2"/>
         <Button x:Name="button_Apply" Content="Apply" Grid.Row="1" Margin="0,6,160,10" HorizontalAlignment="Right" Width="70" Click="button_Apply_Click"/>
     </Grid>
 </Window>
