--- a/WPF/SAM.Analytical.UI.WPF/Windows/RenameSpacesWindow.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Windows/RenameSpacesWindow.xaml
@@ -5,13 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SAM.Analytical.UI.WPF"
         mc:Ignorable="d"
-        Title="Rename Spaces" Height="350" Width="400" ResizeMode="NoResize">
+        Title="Rename Spaces" Height="320" Width="360" ResizeMode="NoResize">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition Height="35"/>
         </Grid.RowDefinitions>
-        <local:RenameSpacesControl x:Name="renameSpacesControl" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
+        <local:RenameSpacesControl x:Name="renameSpacesControl" HorizontalAlignment="Stretch" Margin="10,10,0,0" VerticalAlignment="Stretch"/>
         <Button x:Name="button_Cancel" IsCancel="True" Content="Cancel" Grid.Row="1" Width="70" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,9.6,10.4" Height="19" Click="button_Cancel_Click"/>
         <Button x:Name="button_OK" Content="OK" Grid.Row="1" Margin="0,5.8,84.6,10.4" HorizontalAlignment="Right" Width="70" Click="button_OK_Click"/>
         <Button x:Name="button_Apply" Content="Apply" Grid.Row="1" Margin="0,6,160,10" HorizontalAlignment="Right" Width="70" Click="button_Apply_Click"/>
