--- a/WPF/SAM.Analytical.UI.WPF/Controls/RenameSpacesControl.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Controls/RenameSpacesControl.xaml
@@ -5,36 +5,82 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SAM.Analytical.UI.WPF"
              mc:Ignorable="d" 
-             d:DesignHeight="230" d:DesignWidth="335" Loaded="UserControl_Loaded">
+             d:DesignHeight="440" d:DesignWidth="335" Loaded="UserControl_Loaded">
     <Grid>
-        <CheckBox x:Name="checkBox_IncludeName" Content="Name:" HorizontalAlignment="Left" Margin="30,15,0,0" VerticalAlignment="Top" IsChecked="True"/>
-        <TextBox x:Name="textBox_Name" HorizontalAlignment="Left" Height="23" Margin="88,10,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="226"/>
-        <GroupBox HorizontalAlignment="Left" Height="168" Margin="22,46,0,0" VerticalAlignment="Top" Width="292">
+
+        <GroupBox HorizontalAlignment="Left" Height="247" Margin="10,10,0,0" VerticalAlignment="Top" Width="315">
             <GroupBox.Header>
-                <CheckBox x:Name="checkBox_IncludeNumber" Content="Number" IsChecked="True"/>
+                <RadioButton x:Name="radioButton_Rename" Content="Rename" IsChecked="True" Click="radioButton_Rename_Click"/>
+            </GroupBox.Header>
+            <Grid>
+                <CheckBox x:Name="checkBox_IncludeName" Content="Name:" HorizontalAlignment="Left" Margin="30,15,0,0" VerticalAlignment="Top" IsChecked="True"/>
+                <TextBox x:Name="textBox_Name" HorizontalAlignment="Left" Height="23" Margin="88,10,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="205"/>
+                <GroupBox x:Name="groupBox_Number" HorizontalAlignment="Left" Height="168" Margin="22,46,0,0" VerticalAlignment="Top" Width="271">
+                    <GroupBox.Header>
+                        <CheckBox x:Name="checkBox_IncludeNumber" Content="Number" IsChecked="True"/>
+                    </GroupBox.Header>
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="30"/>
+                            <RowDefinition Height="26"/>
+                            <RowDefinition Height="26"/>
+                            <RowDefinition Height="26"/>
+                            <RowDefinition Height="26"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="auto"/>
+                            <ColumnDefinition Width="auto"/>
+                        </Grid.ColumnDefinitions>
+                        <RadioButton x:Name="radioButton_Prefix" Grid.Column="0" Content="Prefix" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Center" IsChecked="True"/>
+                        <RadioButton x:Name="radioButton_Sufix" Grid.Column="1" Content="Sufix" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Center"/>
+                        <CheckBox x:Name="checkBox_IncludeLevel" Grid.Row="1" Grid.Column="0" Content="Level" VerticalAlignment="Center" HorizontalAlignment="Left" IsChecked="True"></CheckBox>
+                        <TextBox Grid.Row="1" Grid.Column="1" Margin="10,3,-60,3" Visibility="Hidden"/>
+                        <Label Grid.Row="2" Grid.Column="0"  Content="Combine By:" VerticalAlignment="Center" HorizontalAlignment="Left"></Label>
+                        <TextBox x:Name="textBox_LevelSeparator" Grid.Row="2" Grid.Column="1" Margin="10,3,-60,3" Text="_"/>
+                        <Label Grid.Row="3" Grid.Column="0"  Content="Number of digits:" VerticalAlignment="Center" HorizontalAlignment="Left"></Label>
+                        <TextBox x:Name="textBox_DigitsNumber" Grid.Row="3" Grid.Column="1" Margin="10,3.4,-60,3" Text="3"/>
+                        <Label Grid.Row="4" Grid.Column="0"  Content="Division character:" VerticalAlignment="Center" HorizontalAlignment="Left"></Label>
+                        <TextBox x:Name="textBox_NameSeparator" Grid.Row="4" Grid.Column="1" Margin="10,3.4,-60,3" Text=" "/>
+                    </Grid>
+                </GroupBox>
+            </Grid>
+        </GroupBox>
+        <GroupBox HorizontalAlignment="Left" Height="84" Margin="10,262,0,0" VerticalAlignment="Top" Width="315">
+            <GroupBox.Header>
+                <RadioButton x:Name="radioButton_Trim" Content="Trim" IsChecked="False" Click="radioButton_Trim_Click"/>
             </GroupBox.Header>
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="30"/>
                     <RowDefinition Height="26"/>
-                    <RowDefinition Height="26"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="135"/>
+                    <ColumnDefinition Width="auto"/>
+                </Grid.ColumnDefinitions>
+                <RadioButton x:Name="radioButton_Trim_Prefix" Grid.Column="0" Content="Prefix" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Center" IsChecked="True"/>
+                <RadioButton x:Name="radioButton_Trim_Sufix" Grid.Column="1" Content="Sufix" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Center"/>
+                <Label x:Name="label_Trim_Count" Grid.Row="1" Grid.Column="0"  Content="Number of characters: " VerticalAlignment="Center" HorizontalAlignment="Left"></Label>
+                <TextBox x:Name="textBox_Trim_Count" Grid.Row="1" Grid.Column="1" Margin="10,3,-60,3" Text="0"/>
+            </Grid>
+        </GroupBox>
+        <GroupBox HorizontalAlignment="Left" Height="75" Margin="10,351,0,0" VerticalAlignment="Top" Width="315">
+            <GroupBox.Header>
+                <RadioButton x:Name="radioButton_Replace" Content="Replace" IsChecked="False" Click="radioButton_Replace_Click"/>
+            </GroupBox.Header>
+            <Grid>
+                <Grid.RowDefinitions>
                     <RowDefinition Height="26"/>
                     <RowDefinition Height="26"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="135"/>
                     <ColumnDefinition Width="auto"/>
                 </Grid.ColumnDefinitions>
-                <RadioButton x:Name="radioButton_Prefix" Grid.Column="0" Content="Prefix" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Center" IsChecked="True"/>
-                <RadioButton x:Name="radioButton_Sufix" Grid.Column="1" Content="Sufix" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Center"/>
-                <CheckBox x:Name="checkBox_IncludeLevel" Grid.Row="1" Grid.Column="0" Content="Level" VerticalAlignment="Center" HorizontalAlignment="Left" IsChecked="True"></CheckBox>
-                <TextBox Grid.Row="1" Grid.Column="1" Margin="10,3,-60,3" Visibility="Hidden"/>
-                <Label Grid.Row="2" Grid.Column="0"  Content="Combine By:" VerticalAlignment="Center" HorizontalAlignment="Left"></Label>
-                <TextBox x:Name="textBox_LevelSeparator" Grid.Row="2" Grid.Column="1" Margin="10,3,-60,3" Text="_"/>
-                <Label Grid.Row="3" Grid.Column="0"  Content="Number of digits:" VerticalAlignment="Center" HorizontalAlignment="Left"></Label>
-                <TextBox x:Name="textBox_DigitsNumber" Grid.Row="3" Grid.Column="1" Margin="10,3.4,-60,3" Text="3"/>
-                <Label Grid.Row="4" Grid.Column="0"  Content="Division character:" VerticalAlignment="Center" HorizontalAlignment="Left"></Label>
-                <TextBox x:Name="textBox_NameSeparator" Grid.Row="4" Grid.Column="1" Margin="10,3.4,-60,3" Text=" "/>
+                <TextBox x:Name="textBox_Replace_Old" Grid.Row="0" Grid.Column="1" Margin="10,3,-150,3"/>
+                <Label x:Name="label_Replace_New" Grid.Row="0" Grid.Column="0"  Content="From:" VerticalAlignment="Center" HorizontalAlignment="Left"></Label>
+                <TextBox x:Name="textBox_Replace_New" Grid.Row="1" Grid.Column="1" Margin="10,3,-150,3" Text=""/>
+                <Label x:Name="label_Replace_Old" Grid.Row="1" Grid.Column="0"  Content="To:" VerticalAlignment="Center" HorizontalAlignment="Left"></Label>
             </Grid>
         </GroupBox>
 
