--- a/WPF/SAM.Core.UI.WPF/Controls/Filter/FilterControl.xaml
+++ b/WPF/SAM.Core.UI.WPF/Controls/Filter/FilterControl.xaml
@@ -7,7 +7,8 @@
              mc:Ignorable="d" 
              d:DesignHeight="500" d:DesignWidth="400">
     <Grid>
-        <Button Content="+" HorizontalAlignment="Right" Margin="0,10,10,0" VerticalAlignment="Top" Width="30" Click="Button_Click"/>
+        <Button Content="+" HorizontalAlignment="Right" Margin="0,10,10,0" VerticalAlignment="Top" Width="30" Click="Button_Add_Click"/>
+        <Button Content="-" HorizontalAlignment="Right" Margin="0,10,45,0" VerticalAlignment="Top" Width="30" Click="Button_Clear_Click"/>
         <ComboBox x:Name="comboBox_Type" HorizontalAlignment="Left" Margin="10,7,0,0" VerticalAlignment="Top" Width="163"/>
         <Grid HorizontalAlignment="Stretch" Margin="10,34,10,10" VerticalAlignment="Stretch">
             <ScrollViewer>
@@ -18,5 +19,6 @@
                 </Grid>
             </ScrollViewer>
         </Grid>
+        
     </Grid>
 </UserControl>
