--- a/WPF/SAM.Core.UI.WPF/Controls/Filter/TextFilterControl.xaml
+++ b/WPF/SAM.Core.UI.WPF/Controls/Filter/TextFilterControl.xaml
@@ -9,10 +9,10 @@
     <Grid>
         <GroupBox x:Name="groupBox_Main" Header="Text" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
             <Grid>
-                <ComboBox x:Name="comboBox_TextComparisonType" HorizontalAlignment="Left" Margin="0,10,0,0" VerticalAlignment="Top" Width="100"/>
-                <TextBox x:Name="textBox_Value" Text="" Margin="0,46,10,9.6"></TextBox>
+                <ComboBox x:Name="comboBox_TextComparisonType" HorizontalAlignment="Left" Margin="0,10,0,0" VerticalAlignment="Top" Width="100" SelectionChanged="comboBox_TextComparisonType_SelectionChanged"/>
+                <TextBox x:Name="textBox_Value" Text="" Margin="0,46,10,9.6" TextInput="textBox_Value_TextInput"></TextBox>
                 <CheckBox x:Name="checkBox_Inverted" Content="Invert" HorizontalAlignment="Right" Margin="0,14,5,0" VerticalAlignment="Top"/>
-                <CheckBox x:Name="checkBox_CaseSensitive" Content="Match case" HorizontalAlignment="Right" Margin="0,14,67.4,0" VerticalAlignment="Top"/>
+                <CheckBox x:Name="checkBox_CaseSensitive" Content="Match case" HorizontalAlignment="Right" Margin="0,14,67.4,0" VerticalAlignment="Top" Click="checkBox_CaseSensitive_Click"/>
             </Grid>
         </GroupBox>
     </Grid>
