--- a/WPF/SAM.Core.UI.WPF/Windows/FilterWindow.xaml
+++ b/WPF/SAM.Core.UI.WPF/Windows/FilterWindow.xaml
@@ -5,15 +5,20 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SAM.Core.UI.WPF"
         mc:Ignorable="d"
-        Title="Filter" Height="500" Width="400">
+        Title="Filter" Height="500" Width="600">
     <Grid>
-        
+
         <Grid.RowDefinitions>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="40"></RowDefinition>
         </Grid.RowDefinitions>
-        <local:FilterControl x:Name="filterControl"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  Grid.Row="0" Margin="0,0,0,0"/>
-        <Button x:Name="button_Cancel" IsCancel="True" Content="Cancel" Grid.Row="1" Margin="0,10,10,10" Width="70" HorizontalAlignment="Right" Click="button_Cancel_Click"></Button>
-        <Button x:Name="button_OK" Content="OK" Grid.Row="1" Margin="0,10,85,10" HorizontalAlignment="Right" Width="70" Click="button_OK_Click" />
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="180"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <local:FilterControl x:Name="filterControl"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  Grid.Row="0" Grid.Column="1" Margin="0,0,0,0"/>
+        <Button x:Name="button_Cancel" IsCancel="True" Content="Cancel" Grid.Row="1" Grid.Column="3" Margin="0,10,10,10" Width="70" HorizontalAlignment="Right" Click="button_Cancel_Click"></Button>
+        <Button x:Name="button_OK" Content="OK" Grid.Row="1" Grid.Column="3" Margin="0,10,85,10" HorizontalAlignment="Right" Width="70" Click="button_OK_Click" />
+        <local:FiltersControl x:Name="filtersControl"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0,0,0,0"/>
     </Grid>
 </Window>
