--- a/WPF/SAM.Analytical.UI.WPF/Windows/FilterWindow.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Windows/FilterWindow.xaml
@@ -22,9 +22,9 @@
         <core:FilterControl x:Name="filterControl"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  Grid.Row="0" Grid.Column="1" Margin="0,0,0,0"/>
         <Button x:Name="button_Cancel" IsCancel="True" Content="Cancel" Grid.Row="1" Grid.Column="3" Margin="0,10,10,10" Width="70" HorizontalAlignment="Right" Click="button_Cancel_Click"></Button>
         <Button x:Name="button_OK" Content="OK" Grid.Row="1" Grid.Column="3" Margin="0,10,85,10" HorizontalAlignment="Right" Width="70" Click="button_OK_Click" />
-        <ListBox Grid.Row="0" Grid.Column="2" HorizontalAlignment="Stretch" Margin="10,42,10,10" VerticalAlignment="Stretch"/>
+        <ListBox x:Name="listBox_Before" Grid.Row="0" Grid.Column="2" HorizontalAlignment="Stretch" Margin="10,42,10,10" VerticalAlignment="Stretch"/>
         <Label Grid.Row="0" Grid.Column="2" Content="Before:" HorizontalAlignment="Left" Margin="10.4,6,0,0" VerticalAlignment="Top"/>
-        <ListBox Grid.Row="0" Grid.Column="3" Margin="10,42,10,10" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"/>
+        <ListBox x:Name="listBox_After" Grid.Row="0" Grid.Column="3" Margin="10,42,10,10" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"/>
         <Label Content="After:" Grid.Column="3" Grid.Row="0" HorizontalAlignment="Left" Margin="10.4,6,0,0" VerticalAlignment="Top"/>
         <core:FiltersControl x:Name="filtersControl"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0,0,0,0"/>
     </Grid>
